tests/snapshots/e2e__duplicate_dep_same_file_under_different_content_roots_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== consumer.proto ===
syntax = "proto3";
message Consumer {}

=== nested/shared.proto ===
syntax = "proto3";
message Shared {}
