tests/snapshots/e2e__locked_mode_lockfile.snap
---
source: tests/e2e.rs
expression: "result.lockfile_snapshot(&[&repo1])"
---
version = 2

[[dependencies]]
name = "repo1"
url = "<base>/org/repo1"
protocol = "file"
branch = "main"
commit_hash = "<commit:main:1>"
