tests/snapshots/e2e__partial_update_output.snap
---
source: tests/e2e.rs
expression: snapshot_tree(&result.output_dir)
---
=== proto/b.proto ===
syntax = "proto3";
message B {}

=== proto/v1.proto ===
syntax = "proto3";
message V1 {}
