tests/snapshots/e2e__prune_mixed_rules_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== extra.proto ===
syntax = "proto3";
message Extra {}

=== imported.proto ===
syntax = "proto3";
message Imported {}

=== other.proto ===
syntax = "proto3";
message Other {}

=== service.proto ===
syntax = "proto3";
import "imported.proto";
message Service {}
