tests/snapshots/e2e__prune_output.snap
---
source: tests/e2e.rs
expression: result.snapshot_tree()
---
=== imported.proto ===
syntax = "proto3";
message Imported {}

=== service.proto ===
syntax = "proto3";
import "imported.proto";
message Service {}
