tests/snapshots/e2e__regex_policy_output.snap
---
source: tests/e2e.rs
expression: snapshot_tree(&result.output_dir)
---
=== service.proto ===
syntax = "proto3";
message Service {}
