tests/snapshots/e2e__revision_pin_lockfile.snap
---
source: tests/e2e.rs
expression: "result.lockfile_snapshot(&[&repo1])"
---
version = 2

[[dependencies]]
name = "repo1"
url = "<base>/org/repo1"
protocol = "file"
revision = "<commit:main:1>"
commit_hash = "<commit:main:1>"
