tests/snapshots/e2e__revision_pin_output.snap
---
source: tests/e2e.rs
expression: snapshot_tree(&result.output_dir)
---
=== proto/v1.proto ===
syntax = "proto3";
message V1 {}
