tests/snapshots/e2e__single_file_dep_lockfile.snap
---
source: tests/e2e.rs
expression: "result.lockfile_snapshot(&[&repo])"
---
version = 2

[[dependencies]]
name = "repo1"
url = "<base>/org/repo1"
protocol = "file"
branch = "main"
commit_hash = "<commit:main:1>"
