tests/snapshots/e2e__single_file_dep_output.snap
---
source: tests/e2e.rs
expression: snapshot_tree(&result.output_dir)
---
=== proto/hello.proto ===
syntax = "proto3";
message Hello {}
